--- a/html/legal_notice.html
+++ b/html/legal_notice.html
@@ -7,19 +7,19 @@
     <title>Legal Notice</title>
     <link rel="stylesheet" href="../css/legal_notice.css">
     <link rel="stylesheet" href="../fonts.css">
-    <script src="../script.js"></script>
-    <script src="../js/template.js"></script>
+    <!-- <script src="../script.js"></script> -->
+    <script src="../../js/template.js"></script>
     <link rel="stylesheet" href="../assets/templates/templates.css">
-    <link rel="stylesheet" href="../assets/templates/desktop_template.html">
+    <link rel="stylesheet" href="../../assets/templates/desktop_template.html">
 
 </head>
 
 <body onload="includeHTML()">
-    <div w3-include-html="../assets/templates/desktop_template.html"></div>
+    <div w3-include-html="../../assets/templates/desktop_template.html"></div>
     <div class="container m-left-328">
         <div class="head">
             <h1>Legal Notice</h1>
-            <a class="arrow-backwards-link" href="index.html">
+            <a class="arrow-backwards-link" href="../index.html">
                 <img class="arrow-backwards" src="../assets/img/arrow-left-line.svg" alt="arrow_left">
             </a>
         </div>
