Implementierung von template.css

--- a/html/legal_notice.html
+++ b/html/legal_notice.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="../css/legal_notice.css">
     <link rel="stylesheet" href="../fonts.css">
     <!-- <script src="../script.js"></script> -->
-    <script src="../../js/template.js"></script>
     <link rel="stylesheet" href="../assets/templates/templates.css">
-    <link rel="stylesheet" href="../../assets/templates/desktop_template.html">
+    <script src="../js/template.js"></script>
+    <!-- <link rel="stylesheet" href="../../assets/templates/desktop_template.html"> -->
 
 </head>
 
