--- a/html/board.html
+++ b/html/board.html
@@ -9,10 +9,12 @@
     <link rel="stylesheet" href="../css/board.css">
     <link rel="stylesheet" href="../style.css">
     <script src="../js/board.js"></script>
+    <script src="../js/template.js"></script>
 </head>
 <body onload="init()">
-    <header></header>
-    <nav></nav>
+    <div w3-include-html="../../assets/templates/desktop_template.html"></div>
+    <!-- <header></header>
+    <nav></nav> -->
     <section class="headerFrame">
         <div class="titleSearch">
             <div class="titleBoard">Board</div>
