--- a/html/help.html
+++ b/html/help.html
@@ -7,13 +7,13 @@
     <title>Help</title>
     <link rel="stylesheet" href="../css/help.css">
     <link rel="stylesheet" href="../fonts.css">
-    <link rel="stylesheet" href="../assets/templates/desktop_template.html">
     <link rel="stylesheet" href="../assets/templates/templates.css">
     <script src="../script.js"></script>
+    <script src="../js/template.js"></script>
 </head>
 
 <body onload="includeHTML()">
-    <div w3-include-html="../assets/templates/desktop_template.html"></div>
+    <div w3-include-html="../../assets/templates/desktop_template.html"></div>
     <div class="container m-left-328">
         <div class="head">
             <h1>Help</h1>
