--- a/html/signup.html
+++ b/html/signup.html
@@ -21,6 +21,7 @@
       <h1 class="signupHeadline">Sign up</h1>
       <div class="mainCredentialsSignup">
         <div class="signupInputFields">
+          <div id="overlay" class="overlay">You signed up successfully</div>
           <form
             action=""
             style="
