--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
         <div class="loginButtons">
           <button
-            type="button"
+            type="submit"
             class="mainpageLoginButton"
             onclick="loginUser()"
           >
