--- a/html/contacts.html
+++ b/html/contacts.html
@@ -10,17 +10,18 @@
     <link rel="stylesheet" href="../fonts.css">
     <script src="../js/contacts.js"></script>
     <script src="../js/template.js"></script>
-<<body onload="includeHTML();">
+</head>
+<body onload="includeHTML();">
     <div w3-include-html="../assets/templates/desktop_template.html"></div>
 
     <div class="mainContainerContacts">
         <div class="contactsSidebar"></div>
         <div class="headlinesContainer">
-        <h1 class="contactsHeadline">Contacts</h1>
-        <h2 class="subheadingContacts">Better with a team</h2>
+            <div class="contactsHeadlineContainer">
+                <h1 class="contactsHeadline">Contacts</h1>
+                <h2 class="subheadingContacts">Better with a team</h2>
+            </div>
+        </div>
     </div>
-    </div>
-    
-
 </body>
 </html>
