dynamisches generieren der Tasks in Board

--- a/html/board.html
+++ b/html/board.html
@@ -10,11 +10,10 @@
     <link rel="stylesheet" href="../style.css">
     <script src="../js/board.js"></script>
     <script src="../js/template.js"></script>
+    <script src="../assets/templates/board_templates.js"></script>
 </head>
 <body onload="init()">
     <div w3-include-html="../../assets/templates/desktop_template.html"></div>
-    <!-- <header></header>
-    <nav></nav> -->
     <section class="headerFrame">
         <div class="titleSearch">
             <div class="titleBoard">Board</div>
