contacts sidebar revised

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -1,27 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contacts</title>
 
-    <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../css/contacts.css">
-    <link rel="stylesheet" href="../fonts.css">
+    <link
+      rel="shortcut icon"
+      href="../assets/img/favicon.ico"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="../css/contacts.css" />
+    <link rel="stylesheet" href="../fonts.css" />
     <script src="../js/contacts.js"></script>
     <script src="../js/template.js"></script>
-</head>
-<body onload="includeHTML();">
+  </head>
+  <body onload="includeHTML();">
     <div w3-include-html="../assets/templates/desktop_template.html"></div>
 
     <div class="mainContainerContacts">
-        <div class="contactsSidebar"></div>
-        <div class="headlinesContainer">
-            <div class="contactsHeadlineContainer">
-                <h1 class="contactsHeadline">Contacts</h1>
-                <h2 class="subheadingContacts">Better with a team</h2>
-            </div>
+      <div class="contactsSidebar">
+        <div class="buttonContactsSidebar">
+          <button class="addContactButton">
+            Add new contact
+            <img src="../assets/img/contact_add.svg" alt="Person" />
+          </button>
         </div>
+      </div>
+      <div class="headlinesContainer">
+        <div class="contactsHeadlineContainer">
+          <h1 class="contactsHeadline">Contacts</h1>
+          <h2 class="subheadingContacts">Better with a team</h2>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
