changed signup script

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -26,6 +26,7 @@
             <img src="../assets/img/contact_add.svg" alt="Person" />
           </button>
         </div>
+        <div id="contactList"></div>
       </div>
       <div class="headlinesContainer">
         <div class="contactsHeadlineContainer">
