--- a/html/contacts.html
+++ b/html/contacts.html
@@ -20,19 +20,22 @@
 
     <div class="mainContainerContacts">
       <div class="contactsSidebar">
-        <div class="buttonContactsSidebar">
+        <div class="buttonContainer">
           <button class="addContactButton">
             Add new contact
             <img src="../assets/img/contact_add.svg" alt="Person" />
           </button>
         </div>
-        <div id="contactList"></div>
+        <div class="contactList" id="contactList">Hallo</div>
       </div>
+
       <div class="headlinesContainer">
         <div class="contactsHeadlineContainer">
           <h1 class="contactsHeadline">Contacts</h1>
           <h2 class="subheadingContacts">Better with a team</h2>
         </div>
+
+        <div id="contactsFullscreen"></div>
       </div>
     </div>
   </body>
