dynamische Detailcard, scrollbares Board

--- a/html/board.html
+++ b/html/board.html
@@ -60,11 +60,12 @@
         </div>
     </section>
     <section class="contentFrame">
-        <div id="toDO" class="columnBoard"></div>
-        <div id="inProgress" class="columnBoard"></div>
-        <div id="awaitFeedback" class="columnBoard"></div>
-        <div id="done" class="columnBoard"></div>
+        <div id="toDO" class="columnBoard scrollbarColumn"></div>
+        <div id="inProgress" class="columnBoard scrollbarColumn"></div>
+        <div id="awaitFeedback" class="columnBoard scrollbarColumn"></div>
+        <div id="done" class="columnBoard scrollbarColumn"></div>
     </section>
-    <section id="idDetailCard"></section>
+    <section id="idDetailCard" class="containerDetailCard d-none">
+    </section>
 </body>
 </html>
