--- a/html/contacts.html
+++ b/html/contacts.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../css/contacts.css" />
     <link rel="stylesheet" href="../fonts.css" />
   </head>
-  <body onload="includeHTML();">
+  <body onload="initializePage()">
     <div w3-include-html="../assets/templates/desktop_template.html"></div>
 
     <div class="mainContainerContacts">
