--- a/html/contacts.html
+++ b/html/contacts.html
@@ -19,7 +19,7 @@
     <div class="mainContainerContacts">
 
     <!-- Overlay Start -->
-      <div class="addNewContactOverlay" id="contactOverlay">
+      <div class="addNewContactOverlay hidden" id="contactOverlay">
         <div class="leftOverlayContent">
           <div class="leftContainer">
             <img
@@ -54,6 +54,7 @@
               <input
                 class="overlayContactsInput"
                 type="text"
+                name="name"
                 placeholder="Name"
                 required
               />
@@ -67,6 +68,7 @@
               <input
                 class="overlayContactsInput"
                 type="email"
+                name="emailAddress"
                 placeholder="Email"
                 required
               />
@@ -80,6 +82,7 @@
               <input
                 class="overlayContactsInput"
                 type="tel"
+                name="phoneNumber"
                 placeholder="Phone"
                 required
               />
