Move in DetailCard

--- a/html/board.html
+++ b/html/board.html
@@ -65,7 +65,7 @@
         <div id="awaitFeedback" class="columnBoard scrollbarColumn"></div>
         <div id="done" class="columnBoard scrollbarColumn"></div>
     </section>
-    <section id="idDetailCard" class="containerDetailCard d-none">
+    <section id="idDetailCard" class="containerDetailCard">
     </section>
 </body>
 </html>
