--- a/html/add_task.html
+++ b/html/add_task.html
@@ -31,7 +31,10 @@
                 <div id="show-contacts">
                 </div>
             </div>
+
             <div class="seperator"></div>
+
+
             <div class="content-right">
                 <label for="input-date">Due Date<span class="span-star">*</span></label>
                 <input id="input-date" type="date" required>
@@ -50,12 +53,12 @@
                 </datalist>
                 <label for="input-subtask">Subtasks</label>
                 <div class="input-container">
-                    <input type="text" id="input-subtask" placeholder="Add new subtask"><button
-                        class="add-button" onclick="addSubTask()">+</button>
+                    <input type="text" id="input-subtask" placeholder="Add new subtask"><button class="add-button"
+                        onclick="addSubTask()">+</button>
                     </div>
                 </div>
-        </section>
-        <div id="show-subtask"></div>
+            </section>
+            <div id="show-subtask"></div>
         <div class="footer">
             <span>*This field is required</span>
             <span>
@@ -65,4 +68,5 @@
         </div>
     </div>
 </body>
+
 </html>
