--- a/html/contacts.html
+++ b/html/contacts.html
@@ -146,7 +146,7 @@
           <h2 class="subheadingContacts">Better with a team</h2>
         </div>
 
-        <div id="contactsFullscreen"></div>
+        <div id="contactsFullscreen" class="contactsFullscreen" onclick="showContactDetails()"></div>
       </div>
     </div>
 
