--- a/html/board.html
+++ b/html/board.html
@@ -20,7 +20,7 @@
             <div class="findAddTask">
                 <div class="search-container">
                     <form class="formSearch">
-                      <input id="searchTask" class="inputSearch" type="text" placeholder="Find Task" name="search">
+                      <input id="searchTask" class="inputSearch" type="text" placeholder="Find Task" name="search" oninput="searchTasks()">
                       <div class="boxSearch">
                         <div class="vektorSearch"></div>
                         <div class="widthSearch">
