--- a/html/contacts.html
+++ b/html/contacts.html
@@ -11,6 +11,7 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="../css/contacts.css" />
+    <link rel="stylesheet" href="../css/contactsFullscreen.css">
     <link rel="stylesheet" href="../fonts.css" />
   </head>
   <body onload="initializePage()">
