--- a/html/contacts.html
+++ b/html/contacts.html
@@ -147,7 +147,7 @@
           <h2 class="subheadingContacts">Better with a team</h2>
         </div>
 
-        <div id="contactsFullscreen" class="contactsFullscreen" onclick="showContactDetails()"></div>
+        <div id="contactsFullscreen" class="contactsFullscreen" onclick="showContactDetails(index)"></div>
       </div>
     </div>
 
