--- a/html/contacts.html
+++ b/html/contacts.html
@@ -11,15 +11,14 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="../css/contacts.css" />
-    <link rel="stylesheet" href="../css/contactsFullscreen.css">
+    <link rel="stylesheet" href="../css/contactsFullscreen.css" />
     <link rel="stylesheet" href="../fonts.css" />
   </head>
   <body onload="initializePage()">
     <div w3-include-html="../assets/templates/desktop_template.html"></div>
 
     <div class="mainContainerContacts">
-
-    <!-- Overlay Start -->
+      <!-- Overlay Start -->
       <div class="addNewContactOverlay hidden" id="contactOverlay">
         <div class="leftOverlayContent">
           <div class="leftContainer">
@@ -44,55 +43,57 @@
             />
           </div>
           <div class="overlayInputContainer">
-            <form  action=""
-            style="
-              display: flex;
-              flex-direction: column;
-              align-items: center;
-              gap: 32px;
-            ">
-            <div class="overlayInputField">
-              <input
-                class="overlayContactsInput"
-                type="text"
-                name="name"
-                placeholder="Name"
-                required
-              />
-              <img
-                class="contactsIcon"
-                src="../assets/img/personIcon.svg"
-                alt="Person"
-              />
-            </div>
-            <div class="overlayInputField">
-              <input
-                class="overlayContactsInput"
-                type="email"
-                name="emailAddress"
-                placeholder="Email"
-                required
-              />
-              <img
-                class="contactsIcon"
-                src="../assets/img/mailIcon.svg"
-                alt="E-Mail"
-              />
-            </div>
-            <div class="overlayInputField">
-              <input
-                class="overlayContactsInput"
-                type="tel"
-                name="phoneNumber"
-                placeholder="Phone"
-                required
-              />
-              <img
-                class="contactsIcon"
-                src="../assets/img/phone.svg"
-                alt="Telefon"
-              />
-            </div>
+            <form
+              action=""
+              style="
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 32px;
+              "
+            >
+              <div class="overlayInputField">
+                <input
+                  class="overlayContactsInput"
+                  type="text"
+                  name="name"
+                  placeholder="Name"
+                  required
+                />
+                <img
+                  class="contactsIcon"
+                  src="../assets/img/personIcon.svg"
+                  alt="Person"
+                />
+              </div>
+              <div class="overlayInputField">
+                <input
+                  class="overlayContactsInput"
+                  type="email"
+                  name="emailAddress"
+                  placeholder="Email"
+                  required
+                />
+                <img
+                  class="contactsIcon"
+                  src="../assets/img/mailIcon.svg"
+                  alt="E-Mail"
+                />
+              </div>
+              <div class="overlayInputField">
+                <input
+                  class="overlayContactsInput"
+                  type="tel"
+                  name="phoneNumber"
+                  placeholder="Phone"
+                  required
+                />
+                <img
+                  class="contactsIcon"
+                  src="../assets/img/phone.svg"
+                  alt="Telefon"
+                />
+              </div>
             </form>
           </div>
           <div class="contactButtons">
@@ -107,7 +108,7 @@
               </a>
             </div>
             <div class="createContainer">
-              <button class="contactCreateButton">
+              <button class="contactCreateButton" onclick="createContact()">
                 <img
                   class="cancelSymbol"
                   src="../assets/img/haken.svg"
@@ -147,8 +148,14 @@
           <h2 class="subheadingContacts">Better with a team</h2>
         </div>
 
-        <div id="contactsFullscreen" class="contactsFullscreen" onclick="showContactDetails(index)"></div>
+        <div
+          id="contactsFullscreen"
+          class="contactsFullscreen"
+          onclick="showContactDetails(index)"
+        ></div>
       </div>
+
+      <div class="contactCreatedOverlay">Contact successfully created</div>
     </div>
 
     <script src="../js/contacts.js"></script>
