added English terms

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -130,7 +130,7 @@
         </div>
       </div>
 
-      <!-- Overlay Ende -->
+      <!-- Overlay End -->
 
       <div class="contactsSidebar">
         <div class="buttonContainer">
